# conversation_corpus_label_comparer

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: build-windows.yml
packaging/: build_windows.ps1  cclc.spec  installer.iss  run_cclc.py
samples/: session01.eaf  session02.eaf
src/cclc/: main.py
src/cclc/core/: analysis.py  corpus.py  elan_document.py  query.py  transitions.py
src/cclc/ui/: analysis_view.py  config_view.py  controller.py  interval_view.py  main_window.py  query_builder.py  query_view.py  timeline.py  transitions_view.py
tests/: conftest.py  test_analysis.py  test_corpus.py  test_elan_document.py  test_query.py  test_transitions.py  test_ui_smoke.py
