[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cclc"
version = "0.1.0"
description = "ELAN corpus label comparer - organize .eaf files into corpora and analyse annotation counts, dictionary coverage and temporal co-occurrence queries."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kai Biermeier" }]
dependencies = [
    "PySide6>=6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-qt>=4",
    "ruff>=0.1",
]

[project.gui-scripts]
cclc = "cclc.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
